added views, message resources + partial registration completed

--- a/src/main/resources/email.properties
+++ b/src/main/resources/email.properties
@@ -1,7 +1,7 @@
 ################### JavaMail Configuration ##########################
-smtp.host=smtp.qip.ru
+smtp.host=smtp.nm.ru
 smtp.port=465
-smtp.protocol=smtps
+smtp.protocol=smtp
 smtp.username=investigation
 smtp.password=Investigation1
 support.email=investigation@nm.ru
